Trying to resolve font-spacing issue on iOS

--- a/app/assets/stylesheets/themes/_yesno.sass
+++ b/app/assets/stylesheets/themes/_yesno.sass
@@ -27,7 +27,7 @@ $colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blu
   src: font-url('Graphik-Regular-Web.eot#iefix') format('embedded-opentype')
   src: font-url('Graphik-Regular-Web.woff') format('woff')
   src: font-url('Graphik-Regular-Web.ttf') format('truetype')
-  font-weight:  normal
+  font-weight:  400
   font-style:   normal
   font-stretch: normal
 
@@ -37,7 +37,7 @@ $colors: (red: #CA3518, orange: darkorange, yellow: #ffe312, green: #58AA00, blu
   src: font-url('abrade.eot#iefix') format('embedded-opentype')
   src: font-url('abrade.woff') format('woff')
   src: font-url('abrade.ttf') format('truetype')
-  font-weight:  normal
+  font-weight:  500
   font-style:   normal
   font-stretch: normal
 
